# internum-core

./: .dockerignore  .gitignore  .linear.toml  Dockerfile  LOCAL_FILE_TESTING.md  justfile  lefthook.yml  pyproject.toml
apps/api/: .env.example  AGENTS.md  pyproject.toml
apps/api/src/api/: main.py
apps/api/src/api/capabilities/: __init__.py
apps/api/src/api/capabilities/document_parsing/: __init__.py  chunking.py  dependencies.py  extraction.py  intake.py  models.py  router.py  schemas.py  service.py
apps/api/src/api/common/: __init__.py  auth.py  errors.py  logging.py  schemas.py  usage.py
apps/api/src/api/config/: __init__.py  overrides.py  settings.py
apps/api/src/api/platform/: __init__.py
apps/api/src/api/platform/openrouter/: __init__.py  client.py  models.py  openai_compat.py  streaming.py
apps/api/src/api/platform/schema/: __init__.py  normalize.py  postprocess.py  repair.py  validate.py
apps/api/tests/: conftest.py  test_auth.py  test_errors.py  test_health.py  test_logging.py  test_settings.py  test_usage.py
apps/api/tests/capabilities/document_parsing/: test_chunking.py  test_extraction.py  test_intake.py  test_parse_endpoint.py  test_supported_file_classes.py
apps/api/tests/platform/: test_openrouter_client.py  test_schema_service.py
scripts/: live_parse_smoke.py
