[project]
name = "internum-core"
version = "0.1.0"
description = "Internum Core backend workspace"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "mypy>=1.17.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
    "types-jsonschema>=4.26.0.20260518",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.uv.sources]
internum-api = { workspace = true }
internum-config = { workspace = true }
internum-shared = { workspace = true }

[tool.ruff]
extend = "packages/config/ruff.toml"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
    "apps/api/tests",
    "packages/config/tests",
    "packages/shared/tests",
]

