[project]
name = "internum-api"
version = "0.1.0"
description = "Internum Core FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "internum-config",
    "internum-shared",
    "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.ruff]
extend = "../../packages/config/ruff.toml"
