[project]
name = "internum-api"
version = "0.1.0"
description = "Internum Core FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "internum-config",
    "json-repair>=0.61.2",
    "jsonschema>=4.26.0",
    "markitdown-ocr>=0.1.0",
    "markitdown[all]>=0.1.5",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.32",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.ruff]
extend = "../../packages/config/ruff.toml"
